Add GitHub link with image to index.html
Added a link to GitHub profile with an image.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@ color: 8a00c4;
             transform: scale(1.05);
       box-shadow: 0 0 25px purple;
     }
+
+    .gitlink {
+      position: absolute;
+      bottom: 0;
+      right:0;
+    }
   </style>
 </head>
 <body>
@@ -161,6 +167,11 @@ color: 8a00c4;
     <!-- Home -->
     <div id="Tab1Content">
       <h3>This is my site feel free to share it📎</h3>
+
+      <a class="gitlink" href="https://avatars.githubusercontent.com/u/45807407?v=4">
+    <img src="my_image.jpg" class="gitlink"  style="width:150px;height:100px;">
+</a>
+
     </div>
 
     <!-- Games -->
