Remove old gitlink and update to new link

--- a/index.html
+++ b/index.html
@@ -148,11 +148,6 @@ color: 8a00c4;
       box-shadow: 0 0 25px purple;
     }
 
-    .gitlink {
-      position: absolute;
-      bottom: 0;
-      right:0;
-    }
   </style>
 </head>
 <body>
@@ -168,7 +163,7 @@ color: 8a00c4;
     <div id="Tab1Content">
       <h3>This is my site feel free to share it📎</h3>
 
-      <a class="gitlink" href="https://avatars.githubusercontent.com/u/45807407?v=4">
+      <a class="gitlink" href="https://jumpshare.com/share/Xi9nse17R88VSI5oM4Ao">
     <img src="my_image.jpg" class="gitlink"  style="width:150px;height:100px;">
 </a>
 
