Update content in index.html
Removed the link to the proxy page and added a note about its status.

--- a/index.html
+++ b/index.html
@@ -161,11 +161,8 @@ color: 8a00c4;
   <div class="tab-content-container">
     <!-- Home -->
     <div id="Tab1Content">
-      <h3>This is my site feel free to share it📎</h3>
-
-      <a class="gitlink" href="https://jumpshare.com/share/Xi9nse17R88VSI5oM4Ao">
-    <img src="my_image.jpg" class="gitlink"  style="width:150px;height:100px;">
-</a>
+      <h3>This is my site feel free to share it📎</h3><br>
+      <p>the proxy page is a bit messed up btw</p>
 
     </div>
 
